manifests/cluster/openbooks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openbooks
  namespace: openbooks
spec:
  selector:
    app: openbooks
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
