manifests/cluster/openbooks/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openbooks
  namespace: openbooks
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openbooks.cowlab.org`)
      kind: Rule
      services:
        - name: openbooks
          port: 80
